--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,7 +2,6 @@
 
 .body {
     margin: 0;
-    padding: 0px;
 }
 .container {
     width: 70%;
@@ -33,7 +32,7 @@
     text-align: left;
   }
 }
-.navbar-brand img {
+.logo-wrapper img {
     max-width: 100%;
     height: auto;
     max-height: 40px;
@@ -166,20 +165,23 @@
     text-align: center;
 }
 .register-section, .login-section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 90vh;
 }
 .form-wrapper {
     max-width: 600px;
     width: 100%;
     margin: 0 auto;
-    padding: 50px;
+    padding: 30px;
     background-color: #ffffff;
     border: 1px solid #ccc;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+.form-group {
+    margin-bottom: 20px;
 }
 .form-label {
     font-size: 16px;
