add favorite and upload views

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,12 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+* {
+    margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
 .body {
     margin: 0;
 }
 .container {
     width: 70%;
     margin: 0 auto;
-    font-family: 'Poppins', sans-serif;
 }
 .navbar {
     background-color: #D8E0FF;
@@ -316,7 +321,6 @@
     color: white;
     border: none;
     border-radius: 5px;
-    width: 16%;
     font-size: 16px;
     font-weight: medium;
 }
@@ -329,4 +333,100 @@
         max-width: none;
         width: 100%;
     }
+}
+.upload-wrapper {
+    max-width: 100%;
+    border: 2px solid #D8E0FF;
+    margin: 35px;
+	padding: 30px;
+	border-radius: 5px;
+    justify-content: center;
+}
+.img-area {
+	position: relative;
+	width: 100%;
+	height: 350px;
+	background-color: #fff;
+	margin-bottom: 30px;
+	border-radius: 5px;
+	overflow: hidden;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+.img-area .icon {
+	font-size: 100px;
+}
+.img-area h3 {
+	font-size: 20px;
+	font-weight: 500;
+	margin-bottom: 6px;
+}
+.img-area p {
+	color: #999;
+}
+.img-area p span {
+	font-weight: 600;
+}
+.img-area img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	object-position: center;
+	z-index: 100;
+}
+.img-area::before {
+	content: attr(data-img);
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, .5);
+	color: #fff;
+	font-weight: 500;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	pointer-events: none;
+	opacity: 0;
+	transition: all .3s ease;
+	z-index: 200;
+}
+.img-area.active:hover::before {
+	opacity: 1;
+}
+.select-image {
+	display: block;
+	width: 100%;
+	border-radius: 5px;
+    border: none;
+	color: #000;
+    text-decoration: underline;
+	font-weight: 500;
+	font-size: 16px;
+	cursor: pointer;
+	transition: all .3s ease;
+}
+.box {
+    margin: 0px 20px;
+}
+.btn-upload {
+    background-color: #364A99;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: medium;
+    margin: 50px 35px;
+    padding: 8px 24px;
+}
+.btn-upload:hover {
+  background-color: #00416a;
+  color: white;
 }
