--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
     margin: 0;
@@ -411,4 +411,51 @@
 .btn-upload:hover {
   background-color: #00416a;
   color: white;
+}
+div#AvatarFileUpload {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    background: #f9f9f9;
+    border: 3px solid #bbb;
+    border-radius: 50% 50%;
+    margin: auto;
+}
+div#AvatarFileUpload > .selected-image-holder{
+    width: 100%;
+    height: 100%;
+    border-radius: 50% 50%;
+}
+div#AvatarFileUpload > .selected-image-holder{
+    width: 100%;
+    overflow: hidden;
+}
+div#AvatarFileUpload > .selected-image-holder>img{
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+}
+div#AvatarFileUpload > .avatar-selector{
+    position: absolute;
+    bottom: 8px;
+    right: 19%;
+    width: 20px;
+    height: 20px;
+}
+div#AvatarFileUpload > .avatar-selector input[type="file"]{
+    display: none;
+}
+div#AvatarFileUpload > .avatar-selector > .avatar-selector-btn{
+    width: 100%;
+    height: 100%;
+    background: #f5f5f59e;
+    padding: 5px 7px;
+    border-radius: 50% 50%;
+}
+div#AvatarFileUpload > .avatar-selector > .avatar-selector-btn>img{
+    width: 100%;
+    height: 100%;
+    object-fit: scale-down;
+    object-position: center;
+    z-index: 2;
 }
