--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,6 +5,7 @@
 	padding: 0;
 	box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    text-align: justify;
 }
 .body {
     margin: 0;
@@ -207,7 +208,7 @@
 }
 .page-title {
     font-size: 36px;
-    font-weight: bold;
+    font-weight: 600;
     margin-bottom: 40px;
 }
 .page-text {
@@ -270,13 +271,13 @@
     color: #6A6A6A;
     text-align: left;
 }
-.artist-name {
+.gallery-section h2.artist-name {
     color: #364A99;
     font-size: 14px;
     font-weight: bold;
     margin-bottom: 16px;
 }
-.art-title {
+.gallery-section h2.artwork-title {
     color: #364A99;
     font-size: 14px;
     font-weight: bold;
@@ -448,7 +449,7 @@ div#AvatarFileUpload > .avatar-selector input[type="file"]{
 div#AvatarFileUpload > .avatar-selector > .avatar-selector-btn{
     width: 100%;
     height: 100%;
-    background: #f5f5f59e;
+    background: #c0c0c09e;
     padding: 5px 7px;
     border-radius: 50% 50%;
 }
@@ -458,4 +459,45 @@ div#AvatarFileUpload > .avatar-selector > .avatar-selector-btn>img{
     object-fit: scale-down;
     object-position: center;
     z-index: 2;
+}
+.figure {
+    border: 1px #cccccc solid;
+    padding: 4px;
+    margin: auto;
+}
+.detail-section h2.artwork-title {
+    font-size: 24px;
+    font-weight: 600;
+}
+.detail-section h3.artist-name {
+    font-size: 18px;
+    font-weight: 500;
+}
+.details-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.details-wrapper span {
+    margin-left:100px
+}
+.table-wrapper>.table-row {
+    display: table-row;
+}
+.table-wrapper>.table-row>.table-col:not(:last-child) {
+    padding-right: 20px;
+}
+.table>.table-row>.table-col.head {
+    word-break: keep-all;
+    white-space: nowrap;
+}
+.table-wrapper>.table-row:not(:last-child)>.table-col {
+    padding-bottom: 12px;
+}
+.table-wrapper>.table-row>.table-col {
+    display: table-cell;
+    line-height: 20px;
+}
+.table-wrapper>.table-row>.table-col:not(:first-child) {
+    padding-left: 20px;
 }
