--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -191,13 +191,24 @@
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
+.form-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
 .form-group {
+    flex: 1 1 48%;
     margin-bottom: 20px;
 }
 .form-group textarea {
-    width: 970px;
+    width: 100%;
     height: 100px;
     box-sizing: border-box;
+}
+@media (max-width: 768px) {
+    .form-group {
+        flex: 1 1 100%;
+    }
 }
 .form-label {
     font-size: 16px;
