update style search

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -175,6 +175,19 @@
     font-size: 16px;
     text-align: center;
 }
+.search-bar {
+    position: relative;
+}
+.search-bar svg {
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    pointer-events: none;
+}
+.search-bar input {
+    padding-left: 40px;
+}
 .register-section, .login-section {
     display: flex;
     align-items: center;
