--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -250,7 +250,7 @@
     margin-top: 20px;
     text-align: justify;
 }
-.card {
+.card-about {
     background-color: #F0F3FF;
     padding: 30px;
     border: none;
@@ -304,6 +304,8 @@
     margin-top: 30px;
     color: #6A6A6A;
     text-align: left;
+    text-decoration: none;
+    color: inherit;
 }
 .card-artwork h2.artist-name {
     color: #364A99;
@@ -330,6 +332,14 @@
     font-weight: bold;
     text-decoration: none;
 }
+.artwork-price {
+    color: #364A99;
+    font-size: 14px;
+    font-weight: 700;
+}
+.card-artwork:hover {
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
 .icon-wrapper {
     color: #364A99;
 }
@@ -344,6 +354,15 @@
 .btn-save:hover {
   background-color: #00416a;
   color: white;
+}
+.btn-save:disabled {
+    background-color: #999;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: medium;
+    opacity: 1;
 }
 @media (max-width: 768px) {
     .btn-save {
@@ -576,7 +595,7 @@ div#AvatarFileUpload > .avatar-selector > .avatar-selector-btn>img{
     margin-bottom: 8px;
 }
 .total-price {
-    font-weight: 500;
+    font-weight: 600;
 }
 .price-bar {
     position: relative;
@@ -590,6 +609,10 @@ div#AvatarFileUpload > .avatar-selector > .avatar-selector-btn>img{
 }
 .price-bar input {
     padding-left: 35px;
+}
+.info-detail h5 {
+    font-size: 16px;
+    font-weight: 600;
 }
 .order-head img {
     max-width: 100%;
@@ -609,9 +632,134 @@ div#AvatarFileUpload > .avatar-selector > .avatar-selector-btn>img{
     background-color: #F0F3FF;
     padding: 30px;
     border-radius: 5px;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+}
+.order-card:hover {
+    box-shadow: 0 4px 8px rgba(0,0,0,0.175);
 }
 .order-card .img-order {
     width: 100%;
     height: auto;
     display: flex;
+}
+.input-group {
+    display: flex;
+    align-items: center;
+}
+.btn-count {
+    font-size: 0.75rem;
+    padding: 0.25rem 0.5rem;
+    height: 2rem;
+    width: 2rem;
+    line-height: 1;
+}
+#quantity {
+    text-align: center;
+    height: 2rem;
+    font-size: 1rem;
+}
+.pagination .active .page-link {
+    background-color: #364A99;
+    color: white;
+}
+.pagination .disabled .page-link {
+    color: #999;
+    pointer-events: none;
+}
+.success-container {
+    text-align: center;
+    margin-top: 100px;
+    padding: 40px 30px;
+    border: 1px solid #e0e0e0;
+    border-radius: 10px;
+    background-color: #F0F3FF;
+    width: 500px;
+    margin: 0 auto;
+}
+.success-icon {
+    font-size: 50px;
+    color: #28a745;
+}
+.success-message {
+    font-size: 20px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-weight: 600;
+}
+.btn-payment {
+    border-color: #000;
+    border-radius: 5px;
+    color: #000;
+  }
+.btn-payment:hover {
+    background-color: #303030;
+    color: #fff;
+    border-color: #000;
+    border-radius: 5px;
+}
+.table-header th {
+    padding: 8px 20px;
+    text-align: center;
+    font-weight: 600;
+}
+.table-header th:first-child {
+    text-align: left;
+}
+.table-header th:nth-child(2) {
+    text-align: right;
+    padding-left: 30px;
+}
+.table-header th:nth-child(3),
+.table-header th:nth-child(4) {
+    text-align: right;
+}
+.sales-wrapper {
+    display: flex;
+    align-items: flex-start;
+    gap: 10px;
+}
+.detail-sales p {
+    font-size: 16px;
+    margin: 0;
+}
+.img-artwork {
+    max-width: 100px;
+    max-height: 100px;
+    object-fit: cover;
+    margin-right: 10px;
+}
+.sales-total {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-left: 40px;
+}
+.sales-total {
+    flex: 1;
+    text-align: right;
+}
+.sales-status {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-right: 90px;
+}
+.sales-status {
+    flex: 1;
+    text-align: right;
+}
+.btn-container a {
+    color: #364A99;
+    text-decoration: none;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0;
+    margin-left: 20px;
+}
+.btn-container a:hover {
+    color: #00416a;
+    text-decoration: underline;
+}
+.col-table {
+    font-weight: 500;
 }
