update yang kurang

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -646,16 +646,9 @@ div#AvatarFileUpload > .avatar-selector > .avatar-selector-btn>img{
     display: flex;
     align-items: center;
 }
-.btn-count {
-    font-size: 0.75rem;
-    padding: 0.25rem 0.5rem;
-    height: 2rem;
-    width: 2rem;
-    line-height: 1;
-}
-#quantity {
+#quantity, #increment, #decrement {
     text-align: center;
-    height: 2rem;
+    height: 2.5rem;
     font-size: 1rem;
 }
 .pagination .active .page-link {
